[gd_scene load_steps=4 format=3 uid="uid://br2fbkufrybo1"]

[ext_resource type="Script" uid="uid://b2t0kr2qhhist" path="res://scripts/ChessRoot.gd" id="1_3pvfr"]
[ext_resource type="Script" uid="uid://cys30htyoiicr" path="res://scripts/ChessBoard.gd" id="1_5t1fc"]
[ext_resource type="Texture2D" uid="uid://3tea0lyxsimu" path="res://Assets/Pieces/bishop.png" id="1_aecfi"]

[node name="ChessRoot" type="Node2D"]
script = ExtResource("1_3pvfr")

[node name="ChessBoard" type="Sprite2D" parent="."]
position = Vector2(574, 70)
texture = ExtResource("1_aecfi")
script = ExtResource("1_5t1fc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BtnMultiplayer" type="Button" parent="CanvasLayer"]
offset_right = 239.0
offset_bottom = 79.0
text = "Ativar Multiplayer"

[node name="BtnServer" type="Button" parent="CanvasLayer"]
offset_left = 18.0
offset_top = 89.0
offset_right = 222.0
offset_bottom = 135.0
text = "Iniciar Servidor
"

[node name="BtnClient" type="Button" parent="CanvasLayer"]
offset_left = 19.0
offset_top = 188.0
offset_right = 224.0
offset_bottom = 238.0
text = "Conectar como Cliente"

[node name="txtIpServer" type="LineEdit" parent="CanvasLayer"]
offset_left = 21.0
offset_top = 246.0
offset_right = 219.0
offset_bottom = 277.0
placeholder_text = "IP: 127.0.0.1"

[node name="txtIpPort" type="LineEdit" parent="CanvasLayer"]
visible = false
offset_left = 21.0
offset_top = 144.0
offset_right = 219.0
offset_bottom = 175.0
placeholder_text = "port"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="CanvasLayer/BtnMultiplayer" to="ChessBoard" method="_on_BtnMultiplayer_pressed"]
[connection signal="pressed" from="CanvasLayer/BtnServer" to="ChessBoard" method="_on_BtnServer_pressed"]
[connection signal="pressed" from="CanvasLayer/BtnClient" to="ChessBoard" method="_on_BtnClient_pressed"]
